# intel-cpu-frequency-library

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: cpufreqlib-config.cmake
include/: cpufreqlib.h
src/: cpuFreqTest.cpp  cpufreqlib.c
